# WinBrowser

./: .gitignore
.github/workflows/: build.yml
cpp/: CMakeLists.txt  README.md
cpp/src/: addressbar.cpp  addressbar.h  browsertabwidget.cpp  browsertabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_helper.cpp  navigationmanager.cpp  navigationmanager.h  storagemanager.cpp  storagemanager.h
cpp/src/models/: bookmark.cpp  bookmark.h  browsertab.cpp  browsertab.h  historyitem.cpp  historyitem.h  settings.cpp  settings.h
